# ForeSight

./: .dockerignore  .gitignore  .sonarcloud.properties  CHANGELOG.md  MANIFEST.in  README.md  coverage.xml  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: benchmark_config.json  run_benchmarks.py
docker/: sonar-test.Dockerfile
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md  RELEASE.md  SOURCE_ENTRYPOINTS.md  TAGS.md  adapters.md  api.md  artifacts.md  changelog.md  cli-logging.md  compatibility.md  faq.md  index.md  legacy-index.md  model-selection.md  models.md  rnn_paper_zoo.md  rnn_zoo.md
docs/advanced/: data-pipeline.md  hierarchical.md  multivariate.md
docs/api-reference/: index.md
docs/assets/css/: custom.css
docs/cli/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guide/: anomaly-detection.md  artifacts.md  data-format.md  evaluation.md  forecasting.md  global-models.md  index.md  intervals.md  models.md  tuning.md
docs/plans/: 2026-02-02-cli-datasets-eval.md  2026-02-02-project-hardening.md  2026-02-28-algo-expansion-20-tasks.md  2026-02-28-deep-learning-100-tasks.md  2026-02-28-foresight-expansion-v2-20-tasks.md  2026-02-28-optimize-a-20-tasks.md  2026-03-02-crossformer-pyraformer-longformer.md  2026-03-02-dl-transformer-rnn-100-tasks.md  2026-03-02-global-dl-architectures-probabilistic.md  2026-03-02-mamba-rwkv-models.md  2026-03-02-timesnet-seq2seq-global.md  2026-03-04-pip-package-40-tasks.md  2026-03-06-global-ml-step-lag-global.md  2026-03-06-global-ml-step-lag-phase2.md  2026-03-06-global-ml-step-lag-phase3.md  2026-03-06-global-ml-step-lag-phase4.md  2026-03-06-global-ml-step-lag-phase5.md  2026-03-06-global-ml-step-lag-phase6.md  2026-03-06-global-xgb-step-lag-phase7.md  2026-03-06-global-xgb-step-lag-phase8.md  2026-03-06-global-xgb-step-lag-phase9.md  2026-03-06-package-roadmap.md  2026-03-07-package-maturity-hardening.md  2026-03-09-50-algorithm-families-execution-plan.md  2026-03-09-algorithm-clusters-2001-2026-roadmap.md  2026-03-09-data-processing-optimization-implementation.md  2026-03-09-timexer-covariate-interface-implementation.md  2026-03-09-wave1-torch-local-parity-implementation.md  2026-03-10-cli-entrypoints-shortcuts.md  2026-03-10-graph-and-foundation-expansion-implementation.md  2026-03-10-retnet-direct-implementation.md  2026-03-10-retnet-global-implementation.md  2026-03-10-ts-data-processing-and-algorithms-plan.md  2026-03-10-ts-wave1-parallel-worktrees-design.md  2026-03-10-ts-wave1-parallel-worktrees-implementation.md  2026-03-11-internal-architecture-refactor-design.md  2026-03-11-internal-architecture-refactor-implementation.md  2026-03-12-package-cohesion-architecture-plan.md  2026-03-13-cli-decomposition-wave2-design.md  2026-03-13-cli-decomposition-wave2-implementation.md  (+148 more)
examples/: adapters_darts.py  adapters_gluonts.py  adapters_shared_bundle.py  adapters_sktime.py  cv_and_conformal.py  intermittent_demand.py  leaderboard.py  more_algorithms.py  mstl_and_tbats.py  quickstart_eval.py  rnn_paper_zoo.py  torch_global_models.py  torch_models.py
ml time series/: prophet.py  现金流预测模型开发.py
src/foresight/: __init__.py  backtesting.py  base.py  batch_execution.py  cli.py  cli_catalog.py  cli_data.py  cli_leaderboard.py  cli_runtime.py  cli_shared.py  conformal.py  cv.py  dataset_long_df_cache.py  detect.py  eval.py  eval_forecast.py  eval_predictions.py  forecast.py  hierarchical.py  intervals.py  io.py  long_df_cache.py  metrics.py  module_cache.py  optional_deps.py  pipeline.py  serialization.py  splits.py  transforms.py  tuning.py
src/foresight/adapters/: __init__.py  darts.py  gluonts.py  shared.py  sktime.py
src/foresight/contracts/: __init__.py  capabilities.py  covariates.py  frames.py  params.py
src/foresight/data/: __init__.py  format.py  prep.py  rnn_paper_metadata.json  workflows.py
src/foresight/data_processing/: __init__.py  format.py
src/foresight/datasets/: __init__.py  loaders.py  registry.py
src/foresight/docsgen/: __init__.py  rnn.py
src/foresight/features/: __init__.py  lag.py  tabular.py  time.py
statistics time series/: ARMA Model.py  Anomaly Detection.py  GARCH Model.py  MA Model.py  Model Selection.py  SARIMA Model.py  STL Decomposition.py  Time Series Data Preprocessing.py  Time Series Data.py  Undo Stationary Transformations.py  VAR Model.py
tests/: conftest.py  test_adapters_darts_gluonts.py  test_adapters_examples_docs.py  test_adapters_public_surface.py  test_adapters_sktime.py  test_architecture_boundaries.py  test_backtesting.py  test_backtesting_max_train_size.py  test_backtesting_max_windows.py  test_batch_execution.py  test_cli.py  test_cli_artifact_info.py  test_cli_broken_pipe.py  test_cli_cv_run.py  test_cli_data.py  test_cli_data_dir.py  test_cli_datasets.py  test_cli_datasets_list_with_path.py  test_cli_datasets_path.py  test_cli_datasets_validate.py  test_cli_datasets_validate_dates.py  test_cli_datasets_validate_single.py  test_cli_detect.py  test_cli_docs_rnn.py  test_cli_doctor.py  test_cli_errors.py  test_cli_eval.py  test_cli_eval_csv.py  test_cli_eval_format.py  test_cli_eval_run.py  test_cli_eval_run_intervals.py  test_cli_forecast.py  test_cli_leaderboard.py  test_cli_leaderboard_models.py  test_cli_leaderboard_summarize.py  test_cli_leaderboard_sweep.py  test_cli_max_windows.py  test_cli_models.py  test_cli_models_info_paper_metadata.py  test_cli_models_list_extended.py  (+357 more)
tools/: check_architecture_imports.py  check_capability_docs.py  check_no_ipynb.py  convert_ipynb_to_py.py  fetch_rnn_paper_metadata.py  fetch_sonar_issues.py  generate_model_capability_docs.py  generate_rnn_docs.py  release_check.py  run_sonar_local.py  run_sonar_test_suite.py  smoke_build_install.py  storage_paths.py  validate_all_models.py
transformer time series/: Embed.py  SelfAttention_Family.py
transformer time series/Time-Series/: run.py
transformer time series/tft/: data_download.py  models.py  quantile_loss.py  run.py  training_tft.py
(+98 files in other folders)
