[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foresight-ts"
version = "0.1.0"
description = "A curated collection of classic & modern time-series forecasting models and utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "ForeSight Contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.scripts]
foresight = "foresight.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]
ml = [
  "scikit-learn>=1.0",
]
stats = [
  "statsmodels>=0.14",
]
torch = [
  "torch>=2.0",
]
all = [
  "scikit-learn>=1.0",
  "statsmodels>=0.14",
  "torch>=2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
