[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foresight-ts"
description = "A curated collection of classic & modern time-series forecasting models and utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "ForeSight Contributors" }]
dynamic = ["version"]
keywords = ["time-series", "forecasting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/skygazer42/ForeSight"
Issues = "https://github.com/skygazer42/ForeSight/issues"
Documentation = "https://github.com/skygazer42/ForeSight#readme"

[project.scripts]
foresight = "foresight.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "build>=1.0",
  "twine>=5.0",
]
ml = [
  "scikit-learn>=1.0",
]
xgb = [
  "xgboost>=2.0",
]
lgbm = [
  "lightgbm>=4.0",
]
catboost = [
  "catboost>=1.2",
]
stats = [
  "statsmodels>=0.14",
]
torch = [
  "torch>=2.0",
]
all = [
  "scikit-learn>=1.0",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
  "statsmodels>=0.14",
  "torch>=2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "foresight.__version__" }

[tool.setuptools.package-data]
foresight = ["data/*.json", "data/*.csv", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
