[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foresight-ts"
description = "A curated collection of classic & modern time-series forecasting models and utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "ForeSight Contributors" }]
dynamic = ["version"]
keywords = ["time-series", "forecasting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/skygazer42/ForeSight"
Issues = "https://github.com/skygazer42/ForeSight/issues"
Documentation = "https://skygazer42.github.io/ForeSight/"

[project.scripts]
foresight = "foresight.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "mkdocs>=1.6",
  "build>=1.0",
  "twine>=5.0",
]
ml = [
  "scikit-learn>=1.0",
]
xgb = [
  "xgboost>=2.0",
]
lgbm = [
  "lightgbm>=4.0",
]
catboost = [
  "catboost>=1.2",
]
stats = [
  "statsmodels>=0.14",
]
torch = [
  "torch>=2.0",
]
transformers = [
  "transformers>=4.0",
]
sktime = [
  "sktime>=0.30",
]
all = [
  "scikit-learn>=1.0",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
  "statsmodels>=0.14",
  "torch>=2.0",
  "transformers>=4.0",
  "sktime>=0.30",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "foresight.__version__" }

[tool.setuptools.package-data]
foresight = ["data/*.json", "data/*.csv", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/foresight/cli.py" = ["F401"]
"src/foresight/cv.py" = ["I001"]
"src/foresight/eval_forecast.py" = ["I001"]
"src/foresight/forecast.py" = ["I001"]
"src/foresight/models/__init__.py" = ["I001"]
"src/foresight/models/registry.py" = ["F401", "I001"]
"src/foresight/models/runtime.py" = ["E402", "I001"]
"src/foresight/services/model_execution.py" = ["I001"]
"tests/*.py" = ["I001"]

[tool.mypy]
python_version = "3.10"
incremental = false
files = [
  "benchmarks/run_benchmarks.py",
  "src/foresight/__init__.py",
  "src/foresight/base.py",
  "src/foresight/cli.py",
  "src/foresight/cli_catalog.py",
  "src/foresight/adapters/sktime.py",
  "src/foresight/pipeline.py",
  "src/foresight/datasets/__init__.py",
  "src/foresight/datasets/registry.py",
  "src/foresight/models/specs.py",
  "src/foresight/models/resolution.py",
  "src/foresight/models/registry.py",
  "src/foresight/serialization.py",
  "tools/check_capability_docs.py",
  "tools/generate_model_capability_docs.py",
  "tools/release_check.py",
]
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
source = ["foresight"]

[tool.coverage.report]
fail_under = 4
show_missing = true
skip_covered = true
